--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "GO Launch file",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${file}"
+    },
+    {
       "name": "ts-node",
       "type": "node",
       "request": "launch",
@@ -19,6 +26,5 @@
       "protocol": "inspector",
       "internalConsoleOptions": "openOnSessionStart"
     }
-
   ]
 }
