--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,26 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "ts-node",
+      "type": "node",
+      "request": "launch",
+      "args": [
+        "${relativeFile}"
+      ],
+      "runtimeArgs": [
+        "-r",
+        "./leetcode_ts/node_modules/ts-node/register"
+      ],
+      "cwd": "${workspaceRoot}",
+      "protocol": "inspector",
+      "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
       "name": "GO Launch file",
       "type": "go",
       "request": "launch",
       "mode": "debug",
       "program": "./leetcode_go"
-    }
+    },
   ]
 }
